# VFS-Bot1

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  =10.3.0  =3.20.0  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  FINAL_VERIFICATION.md  FRONTEND_UI_GUIDE.md  IMPLEMENTATION_BOT_CONTROLLER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  Makefile  PR_SUMMARY.md  README.md  SECURITY.md  SECURITY_AUDIT.md  WAITLIST_IMPLEMENTATION.md  alembic.ini  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  main.py  notes.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  verify_integration.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-setup-steps.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  integration-tests.yml
alembic/: env.py
alembic/versions/: 001_baseline.py  002_remove_cvv_encrypted.py  003_add_admin_secret_usage.py  004_add_visa_fields.py  005_add_person_fields.py  006_encrypt_passport.py  007_drop_schema_migrations.py  008_account_pool.py  009_encrypt_card_metadata.py  010_add_dropdown_cache.py  011_add_booked_date.py  012_add_cvv_encrypted.py
config/: config.example.yaml  country_profiles.yaml  learned_states.yaml  page_states.yaml  proxies.txt.example  proxy-endpoints.csv  sample-vfs-users.csv  selectors.yaml
docs/: ACCOUNT_POOL_MIGRATION.md  API_AUTHENTICATION.md  AUTOMATION_FEATURES.md  COUNTRY_SELECTOR_SYSTEM.md  DASHBOARD_UI_GUIDE.md  DIAGNOSTIC_REPORT.md  EMAIL_OTP_SETUP.md  ENVIRONMENT_SETUP.md  FINAL_VERIFICATION.md  FRONTEND_IMPLEMENTATION.md  FRONTEND_IMPROVEMENTS.md  FRONTEND_UI_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIDDLEWARE.md  MIGRATION_SUMMARY.md  MODULAR_ARCHITECTURE.md  OTP_MANAGER_GUIDE.md  PAGE_STATE_DETECTION.md  PAGE_STATE_EXAMPLES.md  PCI_DSS_COMPLIANCE.md  PR_SUMMARY.md  REFACTORING_ROADMAP.md  RESILIENCE_GUIDE.md  SECURITY.md  SECURITY_SUMMARY.md  SMS_WEBHOOK_SETUP.md  TOKEN_SYNC_IMPLEMENTATION.md  VFS_DROPDOWN_SYNC.md  VFS_DUAL_MODE.md
docs/audits/: AUDIT_MODELS_THREAD_SAFETY.md
frontend/: .eslintrc.json  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: dashboard.spec.ts  login.spec.ts  users.spec.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx  version.ts  vite-env.d.ts
monitoring/: prometheus.yml
monitoring/grafana/: vfs-bot-dashboard.json
scripts/: bump_version.py  check_critical_coverage.py  db-backup.sh  docker-entrypoint.sh  generate_secrets.py  rotate_secrets.py  setup_environment.py  verify_lock.py  verify_migration.py  verify_version_sync.py
src/: __init__.py  bot.py  captcha_solver.py  centre_fetcher.py  cloudflare_handler.py  config_loader.py  config_validator.py  constants.py  database.py  env_validator.py  fingerprint_bypass.py  header_manager.py  human_simulator.py  logger.py  notification.py  proxy_manager.py  rate_limiter.py  session_manager.py  stealth_config.py  tls_handler.py
src/constants/: __init__.py  captcha.py  countries.py  database.py  error_capture.py  locale.py  logging.py  otp.py  resilience.py  security.py  timing.py
src/core/: __init__.py  auth.py  bot_controller.py  circuit_breaker.py  config_hot_reload.py  config_loader.py  config_models.py  config_validator.py  config_version_checker.py  constants.py  context.py  countries.py  enums.py  env_validator.py  environment.py  exceptions.py  feature_flags.py  logger.py  logging_config.py  monitoring.py  result.py  retry.py  runners.py  security.py  sensitive.py  settings.py  shutdown.py  startup.py  startup_validator.py  validators.py
src/middleware/: __init__.py  correlation.py  correlation_id.py  error_handler.py  request_tracking.py
src/models/: __init__.py  database.py  db_connection.py  db_factory.py  db_state.py  schemas.py  user.py  vfs_account.py
src/repositories/: __init__.py  account_pool_repository.py  appointment_history_repository.py  appointment_repository.py  appointment_request_repository.py  audit_log_repository.py  base.py  dropdown_cache_repository.py  log_repository.py  payment_repository.py  proxy_repository.py  token_blacklist_repository.py  user_entity.py  user_read_repository.py  user_repository.py  user_write_repository.py  webhook_repository.py
src/resilience/: __init__.py  ai_page_analyzer.py  ai_repair_v2.py  forensic_logger.py  hot_reload.py  learned_state_store.py  manager.py  page_state_detector.py  smart_wait.py
src/selector/: __init__.py  ai_repair.py  learning.py  manager.py  self_healing.py  watcher.py
src/services/: __init__.py  account_pool.py  adaptive_scheduler.py  alert_service.py  appointment_booking_service.py  appointment_deduplication.py  bot_service.py  captcha_solver.py  centre_fetcher.py  circuit_breaker.py  (+20 more)
tests/: .env.test  .env.test.example  README.md  __init__.py  conftest.py  test_adaptive_scheduler.py  test_ai_repair.py  test_alert_service.py  test_anti_detection.py  test_anti_detection_init.py  test_appointment_booking.py  test_appointment_deduplication.py  test_auth.py  test_auth_rate_limiter.py  test_booking_package.py  test_booking_selector_migration.py  test_booking_workflow_error_capture.py  test_booking_workflow_multi_person.py  test_booking_workflow_retry_fix.py  test_bot.py  test_bot_controller.py  test_bot_extended.py  test_bot_integration.py  test_bot_service.py  test_bot_service_simple.py  test_bot_simple.py  test_cache_ttl.py  test_captcha.py  test_captcha_centre_extended.py  test_captcha_simple.py  test_captcha_solver_integration.py  test_centre_fetcher_integration.py  test_centre_simple.py  test_circuit_breaker.py  test_cleanup_service.py  test_code_audit_fixes.py  test_config_hot_reload.py  test_config_loader.py  test_config_models.py  test_config_validator.py  (+105 more)
web/: __init__.py  api_versioning.py  app.py  app_config.py  cors.py  dependencies.py  exception_handlers.py  ip_utils.py
(+524 files in other folders)
