[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vfs-bot"
version = "2.2.0"
description = "VFS Global Appointment Booking Bot with automated slot checking and booking"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "akbyhakan", email = "247059625+akbyhakan@users.noreply.github.com"}
]
keywords = ["vfs", "appointment", "booking", "automation", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.58.0,<2.0.0",
    "fastapi==0.128.7",
    "python-multipart~=0.0.22",
    "uvicorn==0.40.0",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2",
    "aiohttp~=3.13.3",
    "asyncpg~=0.30.0",
    "alembic~=1.14.0",
    "sqlalchemy[asyncio]~=2.0.37",
    "tenacity==9.0.0",
    "python-telegram-bot==21.10",
    "aiosmtplib==3.0.2",
    "httpx~=0.28.1",
    "jinja2==3.1.5",
    "websockets==14.2",
    "pydantic==2.10.6",
    "pydantic-settings~=2.7.1",
    "email-validator~=2.2.0",
    "prometheus-client~=0.21.1",
    "nopecha==2.0.1",
    "twocaptcha==0.0.1",
    "anticaptchaofficial==1.0.69",
    "SpeechRecognition==3.10.1",
    "pydub==0.25.1",
    "curl-cffi~=0.7.4",
    "numpy>=2.2.0",
    "pyjwt~=2.10.1",
    "loguru~=0.7.3",
    "passlib[bcrypt]~=1.7.4",
    "Pillow~=11.1.0",
    "slowapi~=0.1.9",
    "cryptography~=46.0.5",
    "pycryptodome~=3.21.0",
    "cachetools~=5.5.1",
    "google-genai~=1.62.0",
    "redis[hiredis]~=5.2.1",
    "apscheduler~=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-asyncio==0.25.3",
    "pytest-mock==3.14.0",
    "pytest-timeout>=2.3.1",
    "coverage[toml]==7.6.10",
    "black==24.10.0",
    "flake8==7.1.1",
    "isort==6.0.0",
    "mypy==1.14.1",
    "pylint==3.3.4",
    "types-requests==2.32.0.20241016",
    "types-PyYAML==6.0.12.20241230",
    "pre-commit==4.1.0",
    "safety>=3.2.14",
    "packaging>=22.0",
    "bandit==1.8.3",
    "httpx>=0.28.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.50",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
  | \.pytest_cache
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 60
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
# Minimum coverage threshold - CI will fail if coverage drops below this
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100
